added new chapter, updated skeletons

--- a/templates/portfolio-skeleton_school.html
+++ b/templates/portfolio-skeleton_school.html
@@ -28,8 +28,7 @@
                 FabLab Oberland e.V. <br>
                 Tölzer Straße 3A <br>
                 83703 Gmund am Tegernsee <br>
-                Mail: alex@oberlab.de <br>
-                Tel: +49 8022 9392632
+                Mail: alex@oberlab.de
 
               <p> Fotos: Max Horn, Alexander Kutschera, Julian Heyder <br>
                 Texte: Julian Heyder, Alexander Kutschera <br>
@@ -45,7 +44,7 @@
             <div class="flex flex-col end">
               <div>
                 <p align=right> Dieses Portfolio wurde automatisch generiert. <br>
-                  Version: 1.0.0 (07.05.2021) <br>
+                  Version: 1.1.0 (13.11.2021) <br>
                   Lizenz: CC-BY-SA 4.0 <br>
                   Änderungen und Irrtümer vorbehalten! <br>
               </div>
@@ -103,7 +102,7 @@
       <h3> So funktionierts! </h3>
       <div class="preamble">
         <p> Hat ein Kurs oder eine Kursreihe euer Interesse geweckt, könnt ihr ganz einfach eine Anfrage an uns senden.
-          Ihr könnt entweder den QR-Code scannen und das Onlineformular ausfüllen oder ganz klassisch mit Email oder Telefon mit uns in Kontakt treten.
+          Ihr könnt entweder den QR-Code scannen und das Onlineformular ausfüllen oder per Email mit uns in Kontakt treten.
           Nennt uns einfach den Kurs, die Anzahl an Teilnehmern sowie Ort und Zeit und vergesst dabei bitte nicht,
           eure Kontaktdaten zu hinterlassen, damit wir euch erreichen können. Meldet euch auch wenn ihr nicht fündig geworden sei und ein individuelles Kursangebot wünscht.
 
@@ -126,7 +125,6 @@
           <h4 align=center> Kontaktdaten </h4>
          <p style="margin-top: 80px;text-align: center;"> <b>Alexander Kutschera</b> <br>
            Mail: alex@oberlab.de <br>
-           Tel.: +49 8022 939 26 32 <br>
            Web: mobiles-fablab.de
         </div>
       </div>
@@ -140,7 +138,6 @@
     <div class="page page-right">
       <h3> Inhalt </h3>
     </div>
-
       {{#each pages}}
               {{{ this }}}
       {{/each}}
