--- a/templates/portfolio-skeleton.html
+++ b/templates/portfolio-skeleton.html
@@ -131,17 +131,41 @@
     </div>
 
     <div class="page page-left">
-      <h3> Inhalt </h3>
+      <h3> Die Kosten </h3>
+      <div class="preamble">
+        <p> Text
+
+      </div>
+    </div>
+
+    <div class="page page-right">
+      <h3> Die Kosten </h3>
+      <div class="preamble">
+        <p> Text
+
+      </div>
+    </div>
+
+    <div class="page page-left">
+      <h3> Unser Angebot </h3>
       {{{ toc }}}
     </div>
 
     <div class="page page-right">
-      <h3> Inhalt </h3>
+      <h3> Unser Angebot </h3>
     </div>
 
     {{#each pages}}
             {{{ this }}}
     {{/each}}
+
+    <div class="page page-left">
+    </div>
+    <div class="page page-right">
+      <h3> War etwas dabei das dir gefallen hat? </h3>
+    </div>
+
+
     </div>
 </body>
 </html>
