--- a/templates/portfolio-skeleton_school.html
+++ b/templates/portfolio-skeleton_school.html
@@ -84,7 +84,7 @@
     </div>
 
     <div class="page page-right">
-      <h3> Team </h3>
+      <h3> Wer steckt dahinter? </h3>
       <div class="flex flex-row space-even">
         <div class="flex flex-col">
           <img id="portrait" src="../content/img/alex_portrait.jpg" alt="missing image"/>
@@ -95,6 +95,11 @@
           <img id="portrait" src="../content/img/julian_portrait.jpg" alt="missing image"/>
           <h3 align=center> Julian C. Heyder </h3>
         </div>
+      </div>
+
+      <div class="preamble">
+        <p> Ermöglicht wird unser Progamm durch die vielen engagierten Personen die Kurse entwickeln, leiten und betreuen.
+        <p><b> Du möchtest Teil des Teams werden? </b> Dann schau auf <div style="color: #3db8c1;"> oberlab.de/offene-stellen </div>
       </div>
     </div>
 
@@ -131,16 +136,41 @@
     </div>
 
     <div class="page page-left">
-      <h3> Inhalt </h3>
+      <h3> Die Kosten </h3>
+      <div class="preamble">
+        <p> Text
+
+      </div>
+    </div>
+
+    <div class="page page-right">
+      <h3> Die Kosten </h3>
+      <div class="preamble">
+        <p> Text
+
+      </div>
+    </div>
+
+    <div class="page page-left">
+      <h3> Unser Angebot für Schulen </h3>
       {{{ toc }}}
     </div>
 
     <div class="page page-right">
-      <h3> Inhalt </h3>
+      <h3> Unser Angebot für Schulen </h3>
     </div>
+
       {{#each pages}}
               {{{ this }}}
       {{/each}}
+
+      <div class="page page-left">
+      </div>
+
+      <div class="page page-right">
+        <h3> War etwas dabei, das dir gefallen hat? </h3>
+      </div>
+
     </div>
 </body>
 </html>
