Added Teil des Teams werden

--- a/templates/portfolio-skeleton.html
+++ b/templates/portfolio-skeleton.html
@@ -95,6 +95,12 @@
           <img id="portrait" src="../content/img/julian_portrait.jpg" alt="missing image"/>
           <h3 align=center> Julian C. Heyder </h3>
         </div>
+
+        <div class="preamble">
+          <p> Ermöglicht wird unser Progamm durch die vielen engagierten Personen die Kurse entwickeln und betreuen oder uns anderweitig unterstützen.
+            <br><b>Du möchtest Teil des Teams werden? </b> Dann besuche <span style="color: #3db8c1;"> oberlab.de/offene-stellen </span> und schreib uns!
+        </div>
+        
       </div>
     </div>
 
