--- a/templates/portfolio-skeleton_school.html
+++ b/templates/portfolio-skeleton_school.html
@@ -98,8 +98,8 @@
       </div>
 
       <div class="preamble">
-        <p> Ermöglicht wird unser Progamm durch die vielen engagierten Personen die Kurse entwickeln, leiten und betreuen.
-        <p><b> Du möchtest Teil des Teams werden? </b> Dann schau auf <div style="color: #3db8c1;"> oberlab.de/offene-stellen </div>
+        <p> Ermöglicht wird unser Progamm durch die vielen engagierten Personen die Kurse entwickeln und betreuen oder uns anderweitig unterstützen.
+          <br><b>Du möchtest Teil des Teams werden? </b> Dann besuche <span style="color: #3db8c1;"> oberlab.de/offene-stellen </span> und schreib uns!
       </div>
     </div>
 
