Small fixes, finished structure

--- a/templates/portfolio-chapter.html
+++ b/templates/portfolio-chapter.html
@@ -5,6 +5,8 @@
     </div>
     <div class="pagenum">{{ pageCount.current }}<span class="chapter-title">{{ title }}</span></div>
 </div>
+
 <div class="page page-right">
+    <img id="chapter" src="../content/img/dummy_chapter.png" alt="missing image"/>
     <div class="pagenum"><span class="chapter-title">{{ title }}</span>{{ add pageCount.current 1 }}</div>
 </div>
