--- a/templates/portfolio-skeleton.html
+++ b/templates/portfolio-skeleton.html
@@ -100,7 +100,7 @@
           <p> Ermöglicht wird unser Progamm durch die vielen engagierten Personen die Kurse entwickeln und betreuen oder uns anderweitig unterstützen.
             <br><b>Du möchtest Teil des Teams werden? </b> Dann besuche <span style="color: #3db8c1;"> oberlab.de/offene-stellen </span> und schreib uns!
         </div>
-        
+
       </div>
     </div>
 
@@ -167,8 +167,13 @@
 
     <div class="page page-left">
     </div>
+    
     <div class="page page-right">
-      <h3> War etwas dabei das dir gefallen hat? </h3>
+      <div class="flex flex-col space-even">
+        <h3 align=center> War etwas dabei, das dir gefallen hat? </h3>
+        <h4 align=center> Dann schick uns deine Anfrage über dieses Onlineformular</h4>
+        <img id="QR" align=center src="../content/QR-Codes/Typeform.png">
+      </div>
     </div>
 
 
