--- a/templates/portfolio-skeleton_school.html
+++ b/templates/portfolio-skeleton_school.html
@@ -168,7 +168,11 @@
       </div>
 
       <div class="page page-right">
-        <h3> War etwas dabei, das dir gefallen hat? </h3>
+        <div class="flex flex-col space-even">
+          <h3 align=center> War etwas dabei, das dir gefallen hat? </h3>
+          <h4 align=center> Dann schick uns deine Anfrage über dieses Onlineformular</h4>
+          <img id="QR" align=center src="../content/QR-Codes/Typeform.png">
+        </div>
       </div>
 
     </div>
