--- a/templates/portfolio-skeleton.html
+++ b/templates/portfolio-skeleton.html
@@ -84,7 +84,7 @@
     </div>
 
     <div class="page page-right">
-      <h3> Team </h3>
+      <h3> Wer steckt dahinter? </h3>
       <div class="flex flex-row space-even">
         <div class="flex flex-col">
           <img id="portrait" src="../content/img/alex_portrait.jpg" alt="missing image"/>
@@ -100,8 +100,6 @@
       <div class="preamble">
         <p> Ermöglicht wird unser Progamm durch die vielen engagierten Personen die Kurse entwickeln und betreuen oder uns anderweitig unterstützen.
           <br><b>Du möchtest Teil des Teams werden? </b> Dann besuche <span style="color: #3db8c1;"> oberlab.de/offene-stellen </span> und schreib uns!
-      </div>
-
       </div>
     </div>
 
