--- a/templates/portfolio-skeleton.html
+++ b/templates/portfolio-skeleton.html
@@ -30,10 +30,10 @@
                 83703 Gmund am Tegernsee <br>
                 Mail: alex@oberlab.de
 
-              <p> Fotos: Max Horn, Alexander Kutschera, Julian Heyder <br>
+              <p> Fotos: Max Horn, Alexander Kutschera, Julian C. Heyder <br>
                 Texte: Julian Heyder, Alexander Kutschera <br>
                 Corporate Design: Gipfelformer <br>
-                Design Umsetzung: Alexander Kutschera, Julian Heyder <br>
+                Design Umsetzung: Alexander Kutschera, Julian C. Heyder <br>
                 Portfolio Generator: Joseph Paul, Alexander Kutschera
 
               <p> <u>Ihr findet uns online unter:</u> <br>
@@ -109,7 +109,7 @@
           <p> Hat ein Kurs oder eine Kursreihe euer Interesse geweckt, könnt ihr ganz einfach eine Anfrage an uns senden.
             Ihr könnt entweder den QR-Code scannen und das Onlineformular ausfüllen oder per Email mit uns in Kontakt treten.
             Nennt uns einfach den Kurs, die Anzahl an Teilnehmern sowie Ort und Zeit und vergesst dabei bitte nicht,
-            eure Kontaktdaten zu hinterlassen, damit wir euch erreichen können. Meldet euch auch wenn ihr nicht fündig geworden sei und ein individuelles Kursangebot wünscht.
+            eure Kontaktdaten zu hinterlassen, damit wir euch erreichen können. Meldet euch auch, wenn ihr nicht fündig geworden seid und ein individuelles Kursangebot wünscht.
 
           <p> Wir wünschen euch viel Spaß beim Durchstöbern unseres Kursangebotes und freuen uns schon sehr auf eure Anfragen und spannende Kurse mit euch!
 
