Implemented Table pricing

--- a/templates/portfolio-skeleton_school.html
+++ b/templates/portfolio-skeleton_school.html
@@ -138,7 +138,38 @@
     <div class="page page-left">
       <h3> Die Kosten </h3>
       <div class="preamble">
-        <p> Text
+        <p> Kurse können ab zwei UE (Eine UE = 45 min) gebucht werden und sind wie folgt aufgeschlüsselt: <br>
+          <style type="text/css">
+.tg  {border-collapse:collapse;border-color:#ccc;border-spacing:0;}
+.tg td{background-color:#fff;border-color:#ccc;border-style:solid;border-width:1px;color:#333;
+  font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;word-break:normal;}
+.tg th{background-color:#f0f0f0;border-color:#ccc;border-style:solid;border-width:1px;color:#333;
+  font-family:Arial, sans-serif;font-size:14px;font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
+.tg .tg-2bn0{font-size:26px;text-align:center;vertical-align:top}
+.tg .tg-9rkz{font-size:24px;font-weight:bold;text-align:center;vertical-align:top}
+</style>
+<table class="tg">
+<thead>
+  <tr>
+    <th class="tg-9rkz">Anzahl TN</th>
+    <th class="tg-9rkz">Kosten á UE</th>
+  </tr>
+</thead>
+<tbody>
+  <tr>
+    <td class="tg-2bn0">bis 15</td>
+    <td class="tg-2bn0">100 €</td>
+  </tr>
+  <tr>
+    <td class="tg-2bn0">15 - 30</td>
+    <td class="tg-2bn0">130 €</td>
+  </tr>
+  <tr>
+    <td class="tg-2bn0">30+</td>
+    <td class="tg-2bn0">Auf Anfrage</td>
+  </tr>
+</tbody>
+</table>
 
       </div>
     </div>
