--- a/templates/portfolio-skeleton.html
+++ b/templates/portfolio-skeleton.html
@@ -136,7 +136,39 @@
     <div class="page page-left">
       <h3> Die Kosten </h3>
       <div class="preamble">
-        <p> Text
+        <p> Kurse können ab 2h gebucht werden und werden wie folgt aufgeschlüsselt: <br>
+
+          <style type="text/css">
+.tg  {border-collapse:collapse;border-color:#ccc;border-spacing:0;}
+.tg td{background-color:#fff;border-color:#ccc;border-style:solid;border-width:1px;color:#333;
+  font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;word-break:normal;}
+.tg th{background-color:#f0f0f0;border-color:#ccc;border-style:solid;border-width:1px;color:#333;
+  font-family:Arial, sans-serif;font-size:14px;font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
+.tg .tg-2bn0{font-size:26px;text-align:center;vertical-align:top}
+.tg .tg-9rkz{font-size:24px;font-weight:bold;text-align:center;vertical-align:top}
+</style>
+<table class="tg">
+<thead>
+  <tr>
+    <th class="tg-9rkz">Anzahl TN</th>
+    <th class="tg-9rkz">Kosten á Stunde</th>
+  </tr>
+</thead>
+<tbody>
+  <tr>
+    <td class="tg-2bn0">bis 10</td>
+    <td class="tg-2bn0">120 €</td>
+  </tr>
+  <tr>
+    <td class="tg-2bn0">10 - 20</td>
+    <td class="tg-2bn0">150 €</td>
+  </tr>
+  <tr>
+    <td class="tg-2bn0">20+</td>
+    <td class="tg-2bn0">Auf Anfrage</td>
+  </tr>
+</tbody>
+</table>
 
       </div>
     </div>
@@ -144,7 +176,9 @@
     <div class="page page-right">
       <h3> Die Kosten </h3>
       <div class="preamble">
-        <p> Text
+        <p> Wir sind ein gemeinnütziger Verein, weswegen wir mit den Kursen keinen wirtschaftlichen Gewinn erzielen möchten. <br>
+          Lediglich zur Entwicklung neuer Kurse, zur Entlohnung des Arbeitsaufwandes der Referenten und zur <br>
+          Begleichung der Materialkosten werden diese Preise angesetzt.
 
       </div>
     </div>
