--- a/templates/portfolio-skeleton.html
+++ b/templates/portfolio-skeleton.html
@@ -176,9 +176,10 @@
     <div class="page page-right">
       <h3> Die Kosten </h3>
       <div class="preamble">
-        <p> Wir sind ein gemeinnütziger Verein, weswegen wir mit den Kursen keinen wirtschaftlichen Gewinn erzielen möchten. <br>
-          Lediglich zur Entwicklung neuer Kurse, zur Entlohnung des Arbeitsaufwandes der Referenten und zur <br>
-          Begleichung der Materialkosten werden diese Preise angesetzt.
+        <p> Wir sind ein gemeinnütziger Verein, weswegen wir mit den Kursen keinen wirtschaftlichen Gewinn erzielen möchten.
+          Lediglich zur Entwicklung neuer Kurse, zur Entlohnung des Arbeitsaufwandes der Referenten und zur
+          Begleichung der Materialkosten werden diese Preise angesetzt. <br>
+          Ab der zweiten Kostenstufe (ab 10 TN) wird unsererseits ein weiterer Übunglseiter notwendig.
 
       </div>
     </div>
