--- a/templates/portfolio-skeleton_school.html
+++ b/templates/portfolio-skeleton_school.html
@@ -177,7 +177,10 @@
     <div class="page page-right">
       <h3> Die Kosten </h3>
       <div class="preamble">
-        <p> Text
+        <p> Die genannten Preise sind Grundpreise. Da wir diverse Förderungen erhalten, können manche Kurse
+          vergünstigt angenboten werden; dies wird individuell für Kurse kommuniziert und hängt unter anderem
+          von der Gruppengröße und dem Zeitaufwand ab. <br>
+          Ab der zweiten Kostenstufe (ab 15 TN) wird zudem ein weiterer Übunglseiter unsererseits notwendig.
 
       </div>
     </div>
