Simplify toc and add page numbers

--- a/templates/portfolio-skeleton.html
+++ b/templates/portfolio-skeleton.html
@@ -193,15 +193,9 @@
       <h3> Unser Angebot </h3>
     </div>
 
-    {{#each tocPages}}
-        <div class="page {{#if (eq (mod @index 2) 0)}}page-left{{else}}page-right{{/if}}">
-          <h3> Inhalt </h3>
-          {{{ this }}}
-        </div>
-    {{/each}}
-    {{#unless (eq (mod tocPages.length 2) 0) }}
-        <div class="page page-right"></div>
-    {{/unless}}
+
+    {{> toc}}
+
 
     {{#each pages}}
         {{{ this }}}
