fixed errors and added pricing

--- a/templates/portfolio-skeleton.html
+++ b/templates/portfolio-skeleton.html
@@ -138,38 +138,24 @@
       <div class="preamble">
         <p> Kurse können ab 2h gebucht werden und werden wie folgt aufgeschlüsselt: <br>
 
-          <style type="text/css">
-.tg  {border-collapse:collapse;border-color:#ccc;border-spacing:0;}
-.tg td{background-color:#fff;border-color:#ccc;border-style:solid;border-width:1px;color:#333;
-  font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;word-break:normal;}
-.tg th{background-color:#f0f0f0;border-color:#ccc;border-style:solid;border-width:1px;color:#333;
-  font-family:Arial, sans-serif;font-size:14px;font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
-.tg .tg-2bn0{font-size:26px;text-align:center;vertical-align:top}
-.tg .tg-9rkz{font-size:24px;font-weight:bold;text-align:center;vertical-align:top}
-</style>
-<table class="tg">
-<thead>
-  <tr>
-    <th class="tg-9rkz">Anzahl TN</th>
-    <th class="tg-9rkz">Kosten á Stunde</th>
-  </tr>
-</thead>
-<tbody>
-  <tr>
-    <td class="tg-2bn0">bis 10</td>
-    <td class="tg-2bn0">120 €</td>
-  </tr>
-  <tr>
-    <td class="tg-2bn0">10 - 20</td>
-    <td class="tg-2bn0">150 €</td>
-  </tr>
-  <tr>
-    <td class="tg-2bn0">20+</td>
-    <td class="tg-2bn0">Auf Anfrage</td>
-  </tr>
-</tbody>
-</table>
+        <div class="flex flex-row space-even">
+          <div class="flex flex-col space-table">
+            <h3> Personenanzahl </h4>
+            <p class="table"> Bis 10 <br>
+                10 - 20 <br>
+                mehr als 20 <br>
 
+          </div>
+
+          <div class="flex flex-col space-table">
+            <h3> Kosten pro Stunde</h4>
+            <p class="table"> 120 EUR <br>
+                130 EUR <br>
+                Auf Anfrage <br>
+
+          </div>
+
+        </div>
       </div>
     </div>
 
@@ -179,7 +165,7 @@
         <p> Wir sind ein gemeinnütziger Verein, weswegen wir mit den Kursen keinen wirtschaftlichen Gewinn erzielen möchten.
           Lediglich zur Entwicklung neuer Kurse, zur Entlohnung des Arbeitsaufwandes der Referenten und zur
           Begleichung der Materialkosten werden diese Preise angesetzt. <br>
-          Ab der zweiten Kostenstufe (ab 10 TN) wird unsererseits ein weiterer Übunglseiter notwendig.
+          Ab der zweiten Kostenstufe (ab 10 TN) wird unsererseits ein weiterer Übungsleiter notwendig.
 
       </div>
     </div>
