--- a/templates/portfolio-skeleton_school.html
+++ b/templates/portfolio-skeleton_school.html
@@ -111,8 +111,6 @@
           Nennt uns einfach den Kurs, die Anzahl an Teilnehmern sowie Ort und Zeit und vergesst dabei bitte nicht,
           eure Kontaktdaten zu hinterlassen, damit wir euch erreichen können. Meldet euch auch, wenn ihr nicht fündig geworden seid und ein individuelles Kursangebot wünscht.
 
-        <p> Die angegebenen Kosten beziehen sich außschließlich auf den Materialaufwand pro Person. Zu diesen kommen Personalkosten die je nach Kurs, Zeit- und Personalaufwand berechnet werden.
-
         <p> Wir wünschen euch viel Spaß beim Durchstöbern unseres Kursangebotes und freuen uns schon sehr auf eure Anfragen und spannende Kurse mit euch!
 
       </div>
@@ -138,39 +136,25 @@
     <div class="page page-left">
       <h3> Die Kosten </h3>
       <div class="preamble">
-        <p> Kurse können ab zwei UE (Eine UE = 45 min) gebucht werden und sind wie folgt aufgeschlüsselt: <br>
-          <style type="text/css">
-.tg  {border-collapse:collapse;border-color:#ccc;border-spacing:0;}
-.tg td{background-color:#fff;border-color:#ccc;border-style:solid;border-width:1px;color:#333;
-  font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;word-break:normal;}
-.tg th{background-color:#f0f0f0;border-color:#ccc;border-style:solid;border-width:1px;color:#333;
-  font-family:Arial, sans-serif;font-size:14px;font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
-.tg .tg-2bn0{font-size:26px;text-align:center;vertical-align:top}
-.tg .tg-9rkz{font-size:24px;font-weight:bold;text-align:center;vertical-align:top}
-</style>
-<table class="tg">
-<thead>
-  <tr>
-    <th class="tg-9rkz">Anzahl TN</th>
-    <th class="tg-9rkz">Kosten á UE</th>
-  </tr>
-</thead>
-<tbody>
-  <tr>
-    <td class="tg-2bn0">bis 15</td>
-    <td class="tg-2bn0">100 €</td>
-  </tr>
-  <tr>
-    <td class="tg-2bn0">15 - 30</td>
-    <td class="tg-2bn0">130 €</td>
-  </tr>
-  <tr>
-    <td class="tg-2bn0">30+</td>
-    <td class="tg-2bn0">Auf Anfrage</td>
-  </tr>
-</tbody>
-</table>
+        <p> Kurse können ab 2h gebucht werden und werden wie folgt aufgeschlüsselt: <br>
 
+        <div class="flex flex-row space-even">
+          <div class="flex flex-col space-table">
+            <h3> Anzahl Schüler:innen </h4>
+            <p class="table"> Bis 15 <br>
+                15 - 30 <br>
+                mehr als 30 <br>
+
+          </div>
+
+          <div class="flex flex-col space-table">
+            <h3> Kosten pro UE</h4>
+            <p class="table"> 100 EUR <br>
+                130 EUR <br>
+                Auf Anfrage <br>
+          </div>
+
+        </div>
       </div>
     </div>
 
