--- a/templates/partials/toc.html
+++ b/templates/partials/toc.html
@@ -1,6 +1,6 @@
 {{#each tocPages}}
     <div class="page {{#if (eq (mod @index 2) 0)}}page-left{{else}}page-right{{/if}}">
-        <h3>{{#if (eq @index 0)}}Inhalt{{else}}<br>{{/if}}</h3>
+        <h3>{{#if (eq @index 0)}}Unser Angebot{{else}}<br>{{/if}}</h3>
         <ol class="toc">
         {{#each this.entries}}
             <li class="toc-entry {{#if this.isChapter}}chapter{{/if}}">
