--- a/templates/portfolio-skeleton_school.html
+++ b/templates/portfolio-skeleton_school.html
@@ -111,6 +111,13 @@
           Nennt uns einfach den Kurs, die Anzahl an Teilnehmern sowie Ort und Zeit und vergesst dabei bitte nicht,
           eure Kontaktdaten zu hinterlassen, damit wir euch erreichen können. Meldet euch auch, wenn ihr nicht fündig geworden seid und ein individuelles Kursangebot wünscht.
 
+        <h4> Wichtige Info für Lehrkräfte </h4>
+        <p> Grundsätzlich bauen wir gerne auf das Vorwissen aus der Schule auf und
+          wiederholen zuvor gelernte Inhalte. Unser Ziel ist es, Lehrplaninhalte zu vermitteln,
+          die dann im regulären Unterricht nicht mehr (im vollem Umfang) behandelt werden müssen.
+          Unser Programm soll kein Mehraufwand für euch sein sondern entlastet euch optimalerweise sogar.
+          Deshalb stimmen wir uns sehr gerne mit euch ab, damit euer Unterricht und unser Angebot optimal ineinandergreifen.
+
         <p> Wir wünschen euch viel Spaß beim Durchstöbern unseres Kursangebotes und freuen uns schon sehr auf eure Anfragen und spannende Kurse mit euch!
 
       </div>
@@ -136,7 +143,7 @@
     <div class="page page-left">
       <h3> Die Kosten </h3>
       <div class="preamble">
-        <p> Kurse können ab 2h gebucht werden und werden wie folgt aufgeschlüsselt: <br>
+        <p> Kurse können ab 2 Unterrichtseinheiten (UE) gebucht werden und werden wie folgt aufgeschlüsselt: <br>
 
         <div class="flex flex-row space-even">
           <div class="flex flex-col space-table">
@@ -161,11 +168,11 @@
     <div class="page page-right">
       <h3> Die Kosten </h3>
       <div class="preamble">
-        <p> Die genannten Preise sind Grundpreise. Da wir diverse Förderungen erhalten, können manche Kurse
-          vergünstigt angenboten werden; dies wird individuell für Kurse kommuniziert und hängt unter anderem
-          von der Gruppengröße und dem Zeitaufwand ab. <br>
-          Ab der zweiten Kostenstufe (ab 15 TN) wird zudem ein weiterer Übunglseiter unsererseits notwendig.
+        <p> Wir möchten mit unseren Kursen keinen Gewinn erzielen und stellen nur die Kosten in Rechnung die uns selbst entstehen.
+          Die Kosten hängen auch stark von der Gruppengröße ab, denn ab 15 TN (zweite Kostenstufe) ein weiterer Übungsleiter unsererseits notwendig.
 
+        <p> Die angegebenen Preise sind Grundpreise für einzelne Kurse. Wenn wir an eurer Schule einen Kurs in mehreren Klassen anbieten können, verringert sich unser Vorbereitungsaufwand.
+            Wenn ihr mehrere Kurse bei uns bucht, bereiten wir euch deshalb gerne ein individuelles Angebot vor.
       </div>
     </div>
 
