--- a/templates/portfolio-skeleton.html
+++ b/templates/portfolio-skeleton.html
@@ -72,13 +72,13 @@
         <div class="preamble">
           <p> In der Zukunft wird die Digitalisierung weiter voranschreiten und neue Technologien sich schneller denn je weiterentwickeln.
             Darauf möchten wir die Generation von morgen bestmöglich vorbereiten.
-            Deshalb sind mit unserem mobilen FabLab-Bus Hubertus unterwegs — einer Forschungswerkstatt auf Rädern, mit der wir Schulen und andere Bildungseinrichtungen besuchen, um Kinder und Jugendliche aller Bildungsschichten für Naturwissenschaften und Technik zu begeistern.
+            Deshalb sind wir mit unserem mobilen FabLab Bus Hubertus unterwegs — einer Forschungswerkstatt auf Rädern, mit der wir Schulen und andere Bildungseinrichtungen besuchen, um Kinder und Jugendliche aller Bildungsschichten für Naturwissenschaften und Technik zu begeistern.
             Wir schaffen einen offenen Zugang zu MINT-Themen und neuen Technologien für Alle und bauen dadurch Vorbehalte ab!
 
         <p> An Bord unserer mobilen Forschungswerkstatt sind ein 3D-Drucker, ein Lasercutter und Equipment für viele Experimente.
           Tüfteln im Klassenzimmer oder im Bus? Geht beides!
           Das mobile Fablab macht sich stark für Technik und Naturwissenschaften – und für alle, die sich dafür interessieren.
-          Unser Anspruch: Maßgeschneiderte Kurse und Aktivitäten, die begeistern.
+          Unser Anspruch: maßgeschneiderte Kurse und Aktivitäten, die begeistern.
           Passend für jede Schulart und Altersklasse, von Otterfing bis Bayrischzell.
       </div>
     </div>
