--- a/templates/portfolio-skeleton_school.html
+++ b/templates/portfolio-skeleton_school.html
@@ -72,13 +72,13 @@
       <div class="preamble">
         <p> In der Zukunft wird die Digitalisierung weiter voranschreiten und neue Technologien sich schneller denn je weiterentwickeln.
           Darauf möchten wir die Generation von morgen bestmöglich vorbereiten.
-          Deshalb sind mit unserem mobilen FabLab-Bus Hubertus unterwegs — einer Forschungswerkstatt auf Rädern, mit der wir Schulen und andere Bildungseinrichtungen besuchen, um Kinder und Jugendliche aller Bildungsschichten für Naturwissenschaften und Technik zu begeistern.
+          Deshalb sind wir mit unserem mobilen FabLab Bus Hubertus unterwegs — einer Forschungswerkstatt auf Rädern, mit der wir Schulen und andere Bildungseinrichtungen besuchen, um Kinder und Jugendliche aller Bildungsschichten für Naturwissenschaften und Technik zu begeistern.
           Wir schaffen einen offenen Zugang zu MINT-Themen und neuen Technologien für Alle und bauen dadurch Vorbehalte ab!
 
         <p> An Bord unserer mobilen Forschungswerkstatt sind ein 3D-Drucker, ein Lasercutter und Equipment für viele Experimente.
           Tüfteln im Klassenzimmer oder im Bus? Geht beides!
           Das mobile Fablab macht sich stark für Technik und Naturwissenschaften – und für alle, die sich dafür interessieren.
-          Unser Anspruch: Maßgeschneiderte Kurse und Aktivitäten, die begeistern.
+          Unser Anspruch: maßgeschneiderte Kurse und Aktivitäten, die begeistern.
           Passend für jede Schulart und Altersklasse, von Otterfing bis Bayrischzell.
       </div>
     </div>
@@ -113,8 +113,8 @@
 
         <h4> Wichtige Info für Lehrkräfte </h4>
         <p> Grundsätzlich bauen wir gerne auf das Vorwissen aus der Schule auf und
-          wiederholen zuvor gelernte Inhalte. Unser Ziel ist es, Lehrplaninhalte zu vermitteln,
-          die dann im regulären Unterricht nicht mehr (im vollem Umfang) behandelt werden müssen.
+          wiederholen zuvor gelernte Inhalte. Unser Ziel ist es Lehrplaninhalte zu vermitteln,
+          die dann im regulären Unterricht nicht mehr (im vollen Umfang) behandelt werden müssen.
           Unser Programm soll kein Mehraufwand für euch sein sondern entlastet euch optimalerweise sogar.
           Deshalb stimmen wir uns sehr gerne mit euch ab, damit euer Unterricht und unser Angebot optimal ineinandergreifen.
 
@@ -169,7 +169,7 @@
       <h3> Die Kosten </h3>
       <div class="preamble">
         <p> Wir möchten mit unseren Kursen keinen Gewinn erzielen und stellen nur die Kosten in Rechnung die uns selbst entstehen.
-          Die Kosten hängen auch stark von der Gruppengröße ab, denn ab 15 TN (zweite Kostenstufe) ein weiterer Übungsleiter unsererseits notwendig.
+          Die Kosten hängen auch stark von der Gruppengröße ab, denn ab 15 TN (zweite Kostenstufe) wird ein weiterer Übungsleiter unsererseits notwendig.
 
         <p> Die angegebenen Preise sind Grundpreise für einzelne Kurse. Wenn wir an eurer Schule einen Kurs in mehreren Klassen anbieten können, verringert sich unser Vorbereitungsaufwand.
             Wenn ihr mehrere Kurse bei uns bucht, bereiten wir euch deshalb gerne ein individuelles Angebot vor.
