fixed small errors and typos in the skeletons

--- a/templates/portfolio-skeleton.html
+++ b/templates/portfolio-skeleton.html
@@ -165,7 +165,7 @@
         <p> Wir sind ein gemeinnütziger Verein, weswegen wir mit den Kursen keinen wirtschaftlichen Gewinn erzielen möchten.
           Lediglich zur Entwicklung neuer Kurse, zur Entlohnung des Arbeitsaufwandes der Referenten und zur
           Begleichung der Materialkosten werden diese Preise angesetzt. <br>
-          Ab der zweiten Kostenstufe (ab 10 TN) wird unsererseits ein weiterer Übungsleiter notwendig.
+          Ab der zweiten Kostenstufe (ab 10 TN) wird unsererseits eine weitere Übungsleitung notwendig.
 
       </div>
     </div>
