--- a/templates/portfolio-skeleton_school.html
+++ b/templates/portfolio-skeleton_school.html
@@ -169,7 +169,7 @@
       <h3> Die Kosten </h3>
       <div class="preamble">
         <p> Wir möchten mit unseren Kursen keinen Gewinn erzielen und stellen nur die Kosten in Rechnung die uns selbst entstehen.
-          Die Kosten hängen auch stark von der Gruppengröße ab, denn ab 15 TN (zweite Kostenstufe) wird ein weiterer Übungsleiter unsererseits notwendig.
+          Die Kosten hängen auch stark von der Gruppengröße ab, denn ab 15 TN (zweite Kostenstufe) wird eine weiterere Übungsleitung unsererseits notwendig.
 
         <p> Die angegebenen Preise sind Grundpreise für einzelne Kurse. Wenn wir an eurer Schule einen Kurs in mehreren Klassen anbieten können, verringert sich unser Vorbereitungsaufwand.
             Wenn ihr mehrere Kurse bei uns bucht, bereiten wir euch deshalb gerne ein individuelles Angebot vor.
