added chaper img

--- a/templates/portfolio-chapter.html
+++ b/templates/portfolio-chapter.html
@@ -7,6 +7,6 @@
 </div>
 
 <div class="page page-right">
-    <img id="chapter" src="../content/img/dummy_chapter.png" alt="missing image"/>
+    <img id="chapter" src="{{ img }}" alt="missing image"/>
     <div class="pagenum"><span class="chapter-title">{{ title }}</span>{{ add pageCount.current 1 }}</div>
 </div>
