--- a/templates/portfolio-skeleton_school.html
+++ b/templates/portfolio-skeleton_school.html
@@ -44,7 +44,7 @@
             <div class="flex flex-col end">
               <div>
                 <p align=right> Dieses Portfolio wurde automatisch generiert. <br>
-                  Version: 1.1.0 (13.11.2021) <br>
+                  Version: 2.0.0 (19.01.2022) <br>
                   Lizenz: CC-BY-SA 4.0 <br>
                   Änderungen und Irrtümer vorbehalten! <br>
               </div>
@@ -192,6 +192,12 @@
           <h4 align=center> Dann schick uns deine Anfrage über dieses Onlineformular</h4>
           <img id="QR" align=center src="../content/QR-Codes/Typeform.png">
         </div>
+      </div>
+
+      <div class="page page-left">
+      </div>
+
+      <div class="page page-right">
       </div>
 
     </div>
