Large-scale clean-up of grammatical errors and syntax.

--- a/templates/portfolio-skeleton.html
+++ b/templates/portfolio-skeleton.html
@@ -75,7 +75,7 @@
             Deshalb sind wir mit unserem mobilen FabLab Bus Hubertus unterwegs — einer Forschungswerkstatt auf Rädern, mit der wir Schulen und andere Bildungseinrichtungen besuchen, um Kinder und Jugendliche aller Bildungsschichten für Naturwissenschaften und Technik zu begeistern.
             Wir schaffen einen offenen Zugang zu MINT-Themen und neuen Technologien für Alle und bauen dadurch Vorbehalte ab!
 
-        <p> An Bord unserer mobilen Forschungswerkstatt sind ein 3D-Drucker, ein Lasercutter und Equipment für viele Experimente.
+        <p> An Bord unserer mobilen Forschungswerkstatt sind ein 3D-Drucker, ein Lasercutter und Equipment für Experimente allerlei Themenbereichen.
           Tüfteln im Klassenzimmer oder im Bus? Geht beides!
           Das mobile Fablab macht sich stark für Technik und Naturwissenschaften – und für alle, die sich dafür interessieren.
           Unser Anspruch: maßgeschneiderte Kurse und Aktivitäten, die begeistern.
