--- a/templates/portfolio-skeleton_school.html
+++ b/templates/portfolio-skeleton_school.html
@@ -75,7 +75,7 @@
           Deshalb sind wir mit unserem mobilen FabLab Bus Hubertus unterwegs — einer Forschungswerkstatt auf Rädern, mit der wir Schulen und andere Bildungseinrichtungen besuchen, um Kinder und Jugendliche aller Bildungsschichten für Naturwissenschaften und Technik zu begeistern.
           Wir schaffen einen offenen Zugang zu MINT-Themen und neuen Technologien für Alle und bauen dadurch Vorbehalte ab!
 
-        <p> An Bord unserer mobilen Forschungswerkstatt sind ein 3D-Drucker, ein Lasercutter und Equipment für viele Experimente.
+        <p> An Bord unserer mobilen Forschungswerkstatt sind ein 3D-Drucker, ein Lasercutter und Equipment für Experimente zu allerlei Themenbereichen.
           Tüfteln im Klassenzimmer oder im Bus? Geht beides!
           Das mobile Fablab macht sich stark für Technik und Naturwissenschaften – und für alle, die sich dafür interessieren.
           Unser Anspruch: maßgeschneiderte Kurse und Aktivitäten, die begeistern.
@@ -98,7 +98,7 @@
       </div>
 
       <div class="preamble">
-        <p> Ermöglicht wird unser Progamm durch die vielen engagierten Personen die Kurse entwickeln und betreuen oder uns anderweitig unterstützen.
+        <p> Ermöglicht wird unser Progamm durch die vielen engagierten Personen, die Kurse entwickeln und betreuen oder uns anderweitig unterstützen.
           <br><b>Du möchtest Teil des Teams werden? </b> Dann besuche <span style="color: #3db8c1;"> oberlab.de/offene-stellen </span> und schreib uns!
       </div>
     </div>
@@ -113,7 +113,7 @@
 
         <h4> Wichtige Info für Lehrkräfte </h4>
         <p> Grundsätzlich bauen wir gerne auf das Vorwissen aus der Schule auf und
-          wiederholen zuvor gelernte Inhalte. Unser Ziel ist es Lehrplaninhalte zu vermitteln,
+          wiederholen zuvor gelernte Inhalte. Unser Ziel ist es, Lehrplaninhalte zu vermitteln,
           die dann im regulären Unterricht nicht mehr (im vollen Umfang) behandelt werden müssen.
           Unser Programm soll kein Mehraufwand für euch sein sondern entlastet euch optimalerweise sogar.
           Deshalb stimmen wir uns sehr gerne mit euch ab, damit euer Unterricht und unser Angebot optimal ineinandergreifen.
@@ -168,7 +168,7 @@
     <div class="page page-right">
       <h3> Die Kosten </h3>
       <div class="preamble">
-        <p> Wir möchten mit unseren Kursen keinen Gewinn erzielen und stellen nur die Kosten in Rechnung die uns selbst entstehen.
+        <p> Wir möchten mit unseren Kursen keinen Gewinn erzielen und stellen nur die Kosten in Rechnung, die uns selbst entstehen.
           Die Kosten hängen auch stark von der Gruppengröße ab, denn ab 15 TN (zweite Kostenstufe) wird eine weiterere Übungsleitung unsererseits notwendig.
 
         <p> Die angegebenen Preise sind Grundpreise für einzelne Kurse. Wenn wir an eurer Schule einen Kurs in mehreren Klassen anbieten können, verringert sich unser Vorbereitungsaufwand.
